# pulumi-aws-tags

./: .eslintrc  .flake8  .gitattributes  .gitignore  .prettierrc  LICENSE  README.md  eslint.config.mjs  package.json  prettier.config.mjs  pyproject.toml  renovate.json  requirements-dev.txt
.github/workflows/: nodejs.yml  python.yml  taggable-resource-types.yml
examples/autotag-py/: Pulumi.yaml  README.md  __main__.py  requirements.txt
examples/nodejs/: Pulumi.yaml  README.md  index.ts  package.json  tsconfig.json
examples/python/: Pulumi.yaml  README.md  __main__.py  requirements.txt
nodejs/: README.md  autotag.ts  index.ts  package.json  taggable.ts  taggable_resource_types.json  tsconfig.json
nodejs/tests/: autotag.spec.ts
nodejs/tests/infra/: Pulumi.yaml  index.ts  package.json  tsconfig.json
python/: README.md  pyproject.toml  requirements.txt  setup.py
python/pulumi_aws_tags/: __init__.py  autotag.py  taggable.py
python/tests/: __init__.py  test_autotag.py
python/tests/infra/: Pulumi.yaml  __init__.py  __main__.py
