[project]
name = "pulumi_aws_tags"
version = "0.7.2"
description = "Pulumi package that helps manage tags for AWS resources"
readme = "README.md"
keywords = ["pulumi", "aws", "tags"]
authors = [{ name = "Tomáš Linhart", email = "pasmen@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://github.com/tlinhart/pulumi-aws-tags" }
requires-python = ">=3.8"
dependencies = ["pulumi>=3.0.0,<4.0.0", "pulumi_aws>=4.0.0,<7.0.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
