[project]
name = "pulumi_aws_tags"
version = "2.0.0"
description = "Pulumi package that helps manage tags for AWS resources"
readme = "README.md"
keywords = ["pulumi", "aws", "tags"]
authors = [{ name = "Tomáš Linhart", email = "pasmen@gmail.com" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://github.com/tlinhart/pulumi-aws-tags" }
requires-python = ">=3.9"
dependencies = ["pulumi>=3.118.0,<4.0.0", "pulumi_aws>=4.0.0,<7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
